# DjangoOnDocker

./: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  db.sqlite3  pyproject.toml
app/api/: models.py
app/api/migrations/: 0001_initial.py
app/django_demo/: settings.py  urls.py
nginx/: nginx.conf
