[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["torkralle <torkralle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
